--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,15 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container flex px-5 mx-auto mt-28">
+      <div>
+          <% if notice %>
+            <%= render 'layouts/alerts' %>
+        <% end %>
+      </div>
+      
       <%= yield %>
+      
     </main>
   </body>
 </html>
