--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -23,7 +23,7 @@
     <%= link_to "Show this book", book_path(book), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
     <%= link_to "Edit this book", edit_book_path(book), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
     <div class="inline-block ml-2">
-      <%= button_to "Destroy this book", book_path(book), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-blue-600 text-white font-medium" %>
+      <%= button_to "Destroy this book", book_path(book), method: :delete, class: "rounded-lg py-3 px-5 bg-blue-600 text-white font-medium" %>
     </div>
   </div>
 </div>
