--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,24 @@
   </head>
 
   <body>
+  
+    <%= render 'layouts/header' %>
+    
     <main class="container flex px-5 mx-auto mt-28">
+
       <div>
           <% if notice %>
             <%= render 'layouts/alerts' %>
         <% end %>
       </div>
+
       
       <%= yield %>
       
+
+
     </main>
+    <%= render 'layouts/footer' %>
+    
   </body>
 </html>
