--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,11 +7,11 @@
       <%= f.input :author %>
     </div>
     <div class="my-5">
-      <%= f.input :isbn, placeholder: '0000000000000 - 13 digits' %>
+      <%= f.input :isbn, placeholder: "0000000000000 - 13 digits" %>
     </div>
     <div class="my-5">
       <%= f.input :description %>
-     </div> 
+     </div>
     <div class="my-5">
       <%= f.button :submit, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
     </div>
