--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -13,7 +13,7 @@
       <%= f.input :description %>
      </div>
     <div class="my-5">
-      <%= f.button :submit, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+      <%= f.button :submit, class: "btn-green" %>
     </div>
   <% end %>
 </div>
