--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,29 +1,25 @@
 <div id="<%= dom_id book %>">
   <p class="my-5">
-    <strong class="block mb-1 font-medium">Title:</strong>
-    <%= book.title %>
+    <strong class="block mb-1 text-2xl font-extrabold h-0.5"><%= book.title %></strong>
   </p>
 
   <p class="my-5">
-    <strong class="block mb-1 font-medium">Author:</strong>
-    <%= book.author %>
+    <strong class="block mb-1 text-xl text-yellow-800"><%= book.author %></strong>
   </p>
 
   <p class="my-5">
-    <strong class="block mb-1 font-medium">Isbn:</strong>
-    <%= book.isbn %>
+    <strong class="inline-flex mb-1 font-bold text-white rounded-tl rounded-tr rounded-bl rounded-br bg-slate-400">ISBN:<%= book.isbn %></strong>
   </p>
 
   <p class="my-5">
-    <strong class="block mb-1 font-medium">Description:</strong>
-    <%= book.description %>
+    <strong class="block mb-1 text-2xl font-semibold text-slate-600"><%= book.description %></strong>
   </p>
 
   <div>
-    <%= link_to "Show this book", book_path(book), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
-    <%= link_to "Edit this book", edit_book_path(book), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+    <%= link_to "Show this book", book_path(book), class: "btn-green" %>
+    <%= link_to "Edit this book", edit_book_path(book), class: "btn-amber" %>
     <div class="inline-block ml-2">
-      <%= button_to "Destroy this book", book_path(book), method: :delete, class: "rounded-lg py-3 px-5 bg-blue-600 text-white font-medium" %>
+      <%= button_to "Destroy this book", book_path(book), method: :delete, class: "btn-red" %>
     </div>
   </div>
 </div>
