--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,4 @@
 <div class="w-full mx-auto md:w-2/3">
-  <h1 class="text-4xl font-bold">Editing book</h1>
-
   <%= render "books/form", book: @book %>
-
-  <%= link_to "Back to books", books_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+  <%= link_to "BACK TO BOOKS", books_path, class: "btn-green" %>
 </div>
