--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class="mx-auto">
     <%= render "books/book", book: @book  %>
     <br>
-    <%= link_to "Back to books", books_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= link_to "BACK TO BOOKS", books_path, class: "btn-green" %>
     <div class="inline-block ml-2">
   </div>
 </div>
