--- a/app/views/layouts/_alerts.html.erb
+++ b/app/views/layouts/_alerts.html.erb
@@ -1,3 +1,5 @@
-    <% if notice.present? %>
-      <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
-    <% end %>
+<% flash.each do |type, msg| %>
+  <p class="flash-<%= type %>">
+    <%= msg %>
+  </p>
+<% end %>
