--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,13 +5,13 @@
 
 @layer components {
   .btn-red {
-    @apply px-6 py-3 mb-1 mr-1 text-sm font-bold text-white uppercase transition-all duration-150 ease-linear bg-pink-500 rounded shadow outline-none active:bg-pink-600 hover:shadow-lg focus:outline-none;
+    @apply inline-flex items-center justify-center gap-2 px-4 py-3 -ml-px text-sm font-medium text-red-700 align-middle transition-all bg-white border first:rounded-l-lg first:ml-0 last:rounded-r-lg hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-2 focus:ring-red-600 dark:bg-gray-800 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-rose-300;
   }
   .btn-amber {
-    @apply px-6 py-3 mb-1 mr-1 text-sm font-bold text-white uppercase transition-all duration-150 ease-linear rounded shadow outline-none bg-amber-500 active:bg-amber-600 hover:shadow-lg focus:outline-none;
+    @apply inline-flex items-center justify-center gap-2 px-4 py-3 -ml-px text-sm font-medium text-gray-700 align-middle transition-all bg-white border first:rounded-l-lg first:ml-0 last:rounded-r-lg hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-2 focus:ring-blue-600 dark:bg-gray-800 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-amber-300;
   }
   .btn-green {
-    @apply px-6 py-3 mb-1 mr-1 text-sm font-bold text-white uppercase transition-all duration-150 ease-linear bg-teal-500 rounded shadow outline-none active:bg-teal-600 hover:shadow-lg focus:outline-none;
+    @apply inline-flex items-center justify-center gap-2 px-4 py-3 -ml-px text-sm font-medium text-gray-700 align-middle transition-all bg-white border first:rounded-l-lg first:ml-0 last:rounded-r-lg hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-2 focus:ring-blue-600 dark:bg-gray-800 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-cyan-300;
   }
   .flash {
     @apply container flex px-5 mx-auto mt-20;
