--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,25 +1,24 @@
-<div id="<%= dom_id book %>">
-  <p class="my-5">
-    <strong class="block mb-1 text-2xl font-extrabold h-0.5"><%= book.title %></strong>
-  </p>
 
-  <p class="my-5">
-    <strong class="block mb-1 text-xl text-yellow-800"><%= book.author %></strong>
-  </p>
-
-  <p class="my-5">
-    <strong class="inline-flex mb-1 font-bold text-white rounded-tl rounded-tr rounded-bl rounded-br bg-slate-400">ISBN:<%= book.isbn %></strong>
-  </p>
-
-  <p class="my-5">
-    <strong class="block mb-1 text-2xl font-semibold text-slate-600"><%= book.description %></strong>
-  </p>
-
-  <div>
-    <%= link_to "Show this book", book_path(book), class: "btn-green" %>
-    <%= link_to "Edit this book", edit_book_path(book), class: "btn-amber" %>
-    <div class="inline-block ml-2">
-      <%= button_to "Destroy this book", book_path(book), method: :delete, class: "btn-red" %>
+  <div id="<%= dom_id book %>" class="flex flex-col flex-[1_0_0%] bg-white dark:bg-gray-800 rounded-bl-3xl rounded-br-3xl rounded-tr-3xl rounded-tl-3xl">
+    <div class="flex-1 p-4 md:p-5">
+      <h3 class="text-3xl font-bold text-gray-800 dark:text-white">
+        <%= book.title %>
+      </h3>
+      <h3 class="text-lg italic font-light text-gray-800 dark:text-white overline">
+        <%= book.author %>
+      </h3>
+      <p class="mt-1 text-gray-800 dark:text-gray-400">
+        <%= book.description %>
+      </p>
+      <p class="text-xs text-gray-500 dark:text-gray-500 overline">
+        ISBN:<%= book.isbn %>
+      </p>
     </div>
-  </div>
-</div>
+    <div class="p-4 border-t sm:px-5 dark:border-gray-700">
+    <div class="inline-flex rounded-md shadow-sm">
+      <%= link_to "SHOW", book_path(book), class:"btn-green" %>
+      <%= link_to "EDIT", edit_book_path(book), class:"btn-amber" %>
+      <%= button_to "DELETE", book_path(book), method: :delete, class:"btn-red" %>
+    </div>
+    </div>
+  </div >
