--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,19 +11,16 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-yellow-50">
-    <header>
-      <%= render 'layouts/header' %>
-    </header>
+  <body class="bg-gray-400">
+
     <div class="flash">
       <%= render 'layouts/alerts' %>
     </div>
-    <main class="container flex px-5 mx-auto mt-6">
+
+    <main>
       <%= yield %>
     </main>
-    <footer>
-      <%= render 'layouts/footer' %>
-    </footer>
+
   </body>
 
 </html>
