--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,7 @@
-<div class="flex w-full mx-auto md:w-2/3">
-  <div class="mx-auto">
+<div class="w-full mx-auto md:w-2/3">
     <%= render "books/book", book: @book  %>
-    <br>
-    <%= link_to "BACK TO BOOKS", books_path, class: "btn-green" %>
-    <div class="inline-block ml-2">
-  </div>
+
+    <div class="inline-flex rounded-md shadow-sm">
+      <%= link_to "BACK TO BOOKS", books_path, class: "btn-green" %>
+    </div>
 </div>
