--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="my-5">
-  <%= simple_form_for book, url: books_path, defaults: { input_html: { class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" } } do |f| %>
+  <%= simple_form_for book, url: book, defaults: { input_html: { class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" } } do |f| %>
     <div class="my-5">
       <%= f.input :title, label: false, hint: 'TITLE '%>
     </div>
