--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -8,7 +8,7 @@
     @apply block w-full px-3 py-2 mt-2 border border-gray-200 rounded-md shadow outline-none;
   }
   .btn-red {
-    @apply inline-flex items-center justify-center gap-2 px-4 py-3 -ml-px text-sm font-medium text-red-700 align-middle transition-all bg-white border first:rounded-l-lg first:ml-0 last:rounded-r-lg hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-2 focus:ring-red-600 dark:bg-gray-800 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-rose-300;
+    @apply inline-flex items-center justify-center gap-2 px-4 py-3 -ml-px text-sm font-medium text-red-700 align-middle transition-all bg-white border rounded-lg first:rounded-l-lg first:ml-0 last:rounded-r-lg hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-2 focus:ring-red-600 dark:bg-gray-800 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-rose-300;
   }
   .btn-amber {
     @apply inline-flex items-center justify-center gap-2 px-4 py-3 -ml-px text-sm font-medium text-gray-700 align-middle transition-all bg-white border first:rounded-l-lg first:ml-0 last:rounded-r-lg hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-2 focus:ring-amber-600 dark:bg-gray-800 dark:hover:bg-slate-800 dark:border-gray-700 dark:text-amber-300;
