--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -15,10 +15,16 @@
       </p>
     </div>
     <div class="p-4 border-t sm:px-5 dark:border-gray-700">
-    <div class="inline-flex rounded-md shadow-sm">
-      <%= link_to "SHOW", book_path(book), class:"btn-green" %>
-      <%= link_to "EDIT", edit_book_path(book), class:"btn-amber" %>
-      <%= button_to "DELETE", book_path(book), method: :delete, class:"btn-red" %>
+      <div class="inline-flex rounded-md shadow-sm">
+      <div class="pl-1">
+        <%= link_to "SHOW", book_path(book), class:"btn-green" %>
+      </div>
+      <div class="pl-1">
+        <%= link_to "EDIT", edit_book_path(book), class:"btn-amber" %>
+      </div>
+      <div class="pl-1">
+        <%= button_to "DELETE", book_path(book), method: :delete, class:"btn-red" %>
+      </div>
     </div>
     </div>
   </div >
