--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,19 +1,11 @@
-<div class="my-5">
+<div>
   <%= simple_form_for book, url: url_for(book), defaults: { input_html: { class: "form" } } do |f| %>
-    <div class="my-5">
-      <%= f.input :title, label: false, hint: 'TITLE '%>
-    </div>
-    <div class="my-5">
-      <%= f.input :author, label: false, hint: 'AUTHOR ' %>
-    </div>
-    <div class="my-5">
-      <%= f.input :isbn, placeholder: "0000000000000 - 13 digits", label: false, hint: 'ISBN ' %>
-    </div>
-    <div class="my-5">
-      <%= f.input :description, label: false, hint: 'DESCRIPTION ' %>
-     </div>
-    <div class="my-5">
-      <%= f.button :submit, class: "btn-green" %>
-    </div>
+    <%= f.input :title, label: false, hint: 'TITLE '%>
+    <%= f.input :author, label: false, hint: 'AUTHOR ' %>
+    <%= f.input :isbn, placeholder: "0000000000000 - 13 digits", label: false, hint: 'ISBN ' %>
+    <%= f.input :description, label: false, hint: 'DESCRIPTION ' %>
+  <div>
+    <%= f.button :submit, "UPDATE BOOK", class: "btn-green" %>
+  </div>
   <% end %>
 </div>
