Add books model crud add tests (#1)
* ✨ feat:

create book model controller view

* ✨ feat:

add validations

* 🦄 refactor:

remove

* 🐞 fix:

isbn mast equal_to 13 dig.

* 🔧 build:

add faker data

* 🔧 build:

redirect root

* 🧪 test:

implement CRUD testing

* 🌈 style:

add rubocop-rails

* 🦄 refactor:

rubocop autocorrect

* 🌈 style:

delete comments

* 🧪 test:

implement gem 'shoulda-matchers' and rewrite test

* 🦄 refactor:

rewrite request test

* 🐞 fix:

нема сенсу в цих тестах

* 🐞 fix:

fix migration valid

* 🐞 fix:

solve expert comments

* 🐞 fix:

refix

* :

fix many bags

* 🐞 fix:

rebuld controller

* 🐞 fix:

next bug

* 🐞 fix:

* 🐞 fix:

rewrite test

* ✨ feat:

add gem simple-form

* 🐞 fix:

gem to alfabet

* 🐞 fix:

add , null: false to migration

* 🐞 fix:

15% bags done

* 🧪 test:

rebuld controller test

* 🦄 refactor:

DRY

* 🌈 style:

butto style

* 🌈 style:

stile

* 🦄 refactor:

remove rubocop

* ✨ feat:

add footer + header

* 🌈 style:

add new line

* 🐞 fix:

correct

* 🦄 refactor:

test refactor to let

* 🌈 style:

change ' to "

* 🐞 fix:

add vscode to gitignore

* 🐞 fix:

* 🐞 fix:

* 🐞 fix:

* 🐞 fix:

* 🐞 fix:

* 🐞 fix:

ALL

* 🌈 style:

change simple form

* 🐞 fix:

del tailwind.css

* 🐞 fix:

expert fix bug plus some syle

* 🦄 refactor:

adding test end refactor it

* 🐞 fix:

simpe form action rebuld

* 🌈 style:

alert change class

* 🐞 fix:

fix

* 🐞 fix:

* 🦄 refactor:

add url_for(book)

* 🦄 refactor:

syntax error

* 🌈 style:

button style

* 🌈 style:

form

* fix bug

* 🦄 refactor:

del tailwind.css

* 🦄 refactor:

unite

* 🦄 refactor:

create few file

* 🧪 test:

response.body

* 🌈 style:

test

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,13 +1,7 @@
+@import "./components/buttons.css";
+@import "./components/flashes.css";
+@import "./components/forms.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
-}
-
-*/
