--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,20 +1,24 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, defaults: { input_html: { class: "form" } }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+  <div class="my-5">
+    <%= f.input :first_name, label: false, hint: "FIRST NAME ", required: true, autofocus: true %>
+    <%= f.input :last_name, label: false, hint: "LAST NAME ", required: true, autofocus: true %>
+    <%= f.input :email, label: false, hint: "EMAIL ", required: true, autofocus: true %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
     <%= f.input :password,
+                label: false,
+                placeholder: "password",
                 hint: "leave it blank if you don't want to change it",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
+                label: false,
+                hint: "PASSWORD CONFIRMATION ",
                 required: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
@@ -23,8 +27,8 @@
                 input_html: { autocomplete: "current-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div class="my-5">
+    <%= f.button :submit, "Update", class: "btn-green" %>
   </div>
 <% end %>
 
@@ -32,4 +36,6 @@
 
 <div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<%= link_to "Back", :back %>
+<div class="inline-flex rounded-md shadow-sm">
+  <%= link_to "BACK TO BOOKS", books_path, class: "btn-green" %>
+</div
