--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,42 @@
 <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: { input_html: { class: "form" } }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
+  <div class="my-5">
     <%= f.input :first_name,
+                label: false,
+                hint: "FIRST NAME ",
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "first_name" }%>
     <%= f.input :last_name,
+                label: false,
+                hint: "LAST NAME ",
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "last_name" }%>
     <%= f.input :email,
+                label: false,
+                hint: "EMAIL ",
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
+                label: false,
+                hint: "PASSWORD ",
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
+                label: false,
+                hint: "PASSWORD CONFIRMATION ",
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class:"btn-green" %>
   </div>
 <% end %>
 
