--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,13 @@
   </head>
 
   <body class="bg-gray-400">
+    <%= render 'layouts/header' %>
+
 
     <div class="flash">
       <%= render 'layouts/alerts' %>
     </div>
+
 
     <main>
       <%= yield %>
