--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full mx-auto md:w-2/3">
+<div id="books" class="grid border-0 rounded-none shadow-none divide-y overflow-hidden sm:block sm:divide-y sm:divide-x dark:border-gray-700 dark:shadow-slate-700/[.7] dark:divide-gray-600 float-none static m-10">
     <%= render "books/book", book: @book  %>
 
     <div class="inline-flex rounded-md shadow-sm">
