--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,20 @@
-<h2>Forgot your password?</h2>
+<div class="flex items-center justify-center m-10 mt-12 text-center dark:bg-gray-800 dark:text-gray-100 rounded-3xl">
+	<div class="flex flex-col w-full max-w-lg p-12 rounded shadow-lg dark:text-gray-400">
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+      <div class="my-5">
+        <%= f.input :email,
+                    label: false,
+                    placeholder: "email",
+                    required: false,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" } %>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      <div class="my-5">
+        <%= f.button :submit, "Send me reset password instructions", class:"btn-green" %>
+      </div>
+    <% end %>
+	</div>
+</div>
