--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,42 @@
-<h2>Sign up</h2>
+<div class="flex items-center justify-center mt-12 text-center dark:bg-gray-800 dark:text-gray-100 m-10 rounded-3xl">
+	<div class="flex flex-col w-full max-w-lg p-12 rounded shadow-lg dark:text-gray-400">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: { input_html: { class: "form" } }) do |f| %>
+      <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: { input_html: { class: "form" } }) do |f| %>
-  <%= f.error_notification %>
+      <div class="my-5">
+        <%= f.input :first_name,
+                    label: false,
+                    hint: "FIRST NAME ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "first_name" }%>
+        <%= f.input :last_name,
+                    label: false,
+                    hint: "LAST NAME ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "last_name" }%>
+        <%= f.input :email,
+                    label: false,
+                    hint: "EMAIL ",
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                    label: false,
+                    required: true,
+                    hint: ("PASSWORD #{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    label: false,
+                    hint: "PASSWORD CONFIRMATION ",
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+      </div>
 
-  <div class="my-5">
-    <%= f.input :first_name,
-                label: false,
-                hint: "FIRST NAME ",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "first_name" }%>
-    <%= f.input :last_name,
-                label: false,
-                hint: "LAST NAME ",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "last_name" }%>
-    <%= f.input :email,
-                label: false,
-                hint: "EMAIL ",
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                label: false,
-                hint: "PASSWORD ",
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                label: false,
-                hint: "PASSWORD CONFIRMATION ",
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up", class:"btn-green" %>
+      </div>
+    <% end %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", class:"btn-green" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
