--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,17 +3,14 @@
 		<a href="/books" class="flex items-center p-2">
 			<%= inline_svg "book.svg", class: "w-8 h-8 text-cyan-400" %>
 		</a>
-		<ul class="items-stretch hidden lg:flex">
-			<li class="flex">
-				<% if current_user %>
-					<a><%= link_to "UPLOAD NEW BOOK", new_book_path, class: "duration-75 delay-1000 animate-pulse flex items-center px-4 -mb-1 border-b-2 dark:border-transparent dark:text-cyan-400 dark:border-cyan-400" %></a>
-				<% end %>
-			</li>
-		</ul>
 		<div class="items-center flex-shrink-0 hidden lg:flex">
 			<% if current_user %>
 				<div class="self-center px-8 py-3 rounded">
-					<%="Hello #{current_user.first_name}!"%>
+					<ul class="items-stretch hidden lg:flex">
+						<li class="flex">
+								<a><%= link_to "Hello #{current_user.first_name}! UPLOAD NEW BOOK", new_book_path, class: "btn-hello" %></a>
+						</li>
+					</ul>
 				</div>
 				<%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "self-center px-8 py-3 font-semibold rounded dark:bg-amber-400 dark:text-gray-900" %>
 			<% else %>
