--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,3 +1,4 @@
+@import "./components/books.css";
 @import "./components/buttons.css";
 @import "./components/flashes.css";
 @import "./components/forms.css";
