Update styles for books index, forms, devise registrations and sessions, and book factory

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,5 +1,5 @@
 <div class="book-par">
-  <img src="https://source.unsplash.com/random/300x300/?2" alt="" class="book-cover">
+  <img src="https://source.unsplash.com/random/300x300" alt="" class="book-cover">
   <div class="flex flex-col justify-between p-6 space-y-8">
     <div class="space-y-2">
       <h2 class="text-3xl font-semibold truncate tracki"><%= book.title %></h2>
