--- a/app/assets/stylesheets/components/books.css
+++ b/app/assets/stylesheets/components/books.css
@@ -1,6 +1,6 @@
 @layer components {
   .books-index {
-    @apply grid border-0 rounded-none shadow-none divide-y overflow-hidden sm:grid sm:divide-y sm:divide-x dark:border-gray-700 dark:shadow-slate-700/[.7] dark:divide-gray-600 float-none static m-3 grid-cols-3 p-0 space-x-0 space-y-0 justify-items-center items-stretch;
+    @apply grid border-0 rounded-none shadow-none divide-y overflow-hidden sm:grid sm:divide-y sm:divide-x dark:border-gray-700 dark:shadow-slate-700/[.7] dark:divide-gray-600 float-none static m-3 grid-cols-3 p-0 space-x-0 space-y-0 justify-items-center items-stretch grid-flow-row gap-y-3;
   }
 
   .book-par {
