--- a/app/assets/stylesheets/components/forms.css
+++ b/app/assets/stylesheets/components/forms.css
@@ -1,5 +1,5 @@
 @layer components {
   .form {
-    @apply block w-full px-3 py-2 mt-2 border border-gray-200 rounded-md shadow outline-none;
+    @apply grid block w-full px-3 py-2 mt-2 border border-gray-200 rounded-md shadow outline-none;
   }
 }
