--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="flex justify-center m-10">
-	<div class="max-w-lg p-4 shadow-md dark:dark:bg-gray-900 dark:dark:text-gray-100 rounded-2xl">
+	<div class="max-w-lg p-4 shadow-md dark:dark:bg-gray-900 dark:dark:text-gray-500 rounded-2xl">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: { input_html: { class: "form" } }) do |f| %>
       <%= f.error_notification %>
 
@@ -40,7 +40,7 @@
                     input_html: { autocomplete: "new-password" } %>
       </div>
 
-      <div class="form-actions grid">
+      <div class="grid form-actions">
         <%= f.button :submit, "Sign up", class:"btn-green" %>
       </div>
     <% end %>
