--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <%= inline_svg "book.svg", class: "w-8 h-8 text-cyan-400" %>
     </a>
     <div class="items-center flex-shrink-0 hidden lg:flex">
-      <% if current_user %>
+      <% if current_user.present? %>
         <div class="self-center px-8 py-3 rounded">
           <ul class="items-stretch hidden lg:flex">
             <li class="flex">
