--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,3 @@
-<div class="w-full mx-auto md:w-2/3">
-    <%= render "books/book", book: @book  %>
-
-    <div class="inline-flex rounded-md shadow-sm">
-      <%= link_to "BACK TO BOOKS", books_path, class: "btn-green" %>
-    </div>
+<div id="books" class="flex justify-center m-10">
+    <%= render "books/show_book", book: @book  %>
 </div>
