--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -2,11 +2,13 @@
   <img src="https://source.unsplash.com/random/300x300" alt="" class="book-cover">
   <div class="flex flex-col justify-between p-6 space-y-8">
     <div class="space-y-2">
-      <h2 class="text-3xl font-semibold truncate tracki"><%= book.title %></h2>
-      <p class="text-lg italic font-light text-gray-800 dark:text-white overline"><%= book.author %></p>
-      <p class="truncate dark:dark:text-gray-100"><%= book.description %></p>
-      <p class="text-xs text-gray-500 dark:text-gray-500 overline">ISBN:<%= book.isbn %></p>
+      <h2 class="text-3xl font-semibold truncate tracki"><%= book.respond_to?(:title) ? book.title : book._data['title'] %></h2>
+      <p class="text-lg italic font-light text-gray-800 dark:text-white overline"><%= book.respond_to?(:author) ? book.author : book._data['author'] %></p>
+      <% if book.respond_to?(:description) %>
+        <p class="truncate dark:dark:text-gray-100"><%= book.description %></p>
+        <p class="text-xs text-gray-500 dark:text-gray-500 overline">ISBN:<%= book.isbn %></p>
+        <%= link_to "READ if You LOG IN)", book_path(book), class: "btn-green" %>
+      <% end %>
     </div>
-    <%= link_to "READ if You LOG IN)", book_path(book), class:"btn-green" %>
   </div>
 </div>
