--- a/app/views/books/_show_book.html.erb
+++ b/app/views/books/_show_book.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="space-y-4">
     <div class="space-y-2">
-      <img src="https://source.unsplash.com/random/480x360/?4" alt="" class="book-cover">
+      <img src="https://covers.openlibrary.org/b/isbn/<%= book.isbn %>-L.jpg" alt="" class="book-cover">
       <div class="flex items-center text-xs">
         <span>ISBN:<%= book.isbn %></span>
       </div>
