--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -5,6 +5,6 @@
         <%= inline_svg "search.svg", class: "w-4 h-4 dark:text-gray-100" %>
       </button>
     </span>
-    <input type="search" name="query" placeholder="Search..." class="w-32 py-2 pl-10 text-sm rounded-md sm:w-auto focus:outline-none dark:bg-gray-800 dark:text-gray-100 focus:dark:bg-gray-900">
+    <input type="search" name="query" placeholder="Search Author or Title..." class="w-32 py-2 pl-10 text-sm rounded-md sm:w-auto focus:outline-none dark:bg-gray-800 dark:text-gray-100 focus:dark:bg-gray-900">
   </form>
 </div>
