--- a/app/assets/stylesheets/components/flashes.css
+++ b/app/assets/stylesheets/components/flashes.css
@@ -4,10 +4,10 @@
   }
 
   .flash .flash-notice {
-    @apply inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50;
+    @apply block px-3 py-2 mb-5 font-medium text-center text-green-500 rounded-lg bg-green-50;
   }
 
   .flash .flash-alert {
-    @apply inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50;
+    @apply block px-3 py-2 mb-5 font-medium text-center text-red-500 rounded-lg bg-red-50;
   }
 }
