--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="sticky top-0 p-4 dark:bg-gray-900 dark:text-gray-100 rounded-b-2xl">
   <div class="container flex justify-between h-16 mx-auto">
-    <a href="/books" class="flex items-center p-2">
+    <a href="/" class="flex items-center p-2">
       <%= inline_svg "book.svg", class: "w-8 h-8 text-cyan-400" %>
     </a>
     <div class="items-center flex-shrink-0 hidden lg:flex">
